--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vuepress dev docs",
+    "dev": "node progress.js & vuepress dev docs",
     "build": "vuepress build docs"
   },
   "repository": {
